@@ -4,12 +4,10 @@ import com.walksocket.md.MdInfoDiff;
 import com.walksocket.md.db.MdDbConnection;
 import com.walksocket.md.output.MdOutputDiff;
 import com.walksocket.md.output.member.MdOutputMemberExistsOnlyBaseTable;
-
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * filter diff exists only base.
@@ -18,6 +16,7 @@ public class MdFilterDiffExistsOnlyBaseTables extends MdFilterDiffAbstract {
 
   /**
    * constructor.
+   *
    * @param con db connection
    */
   public MdFilterDiffExistsOnlyBaseTables(MdDbConnection con) {
@@ -25,10 +24,12 @@ public class MdFilterDiffExistsOnlyBaseTables extends MdFilterDiffAbstract {
   }
 
   @Override
-  public void filter(List<MdInfoDiff> baseInfoList, List<MdInfoDiff> compareInfoList, MdOutputDiff outputDiff) throws SQLException {
+  public void filter(List<MdInfoDiff> baseInfoList, List<MdInfoDiff> compareInfoList,
+      MdOutputDiff outputDiff) throws SQLException {
     List<MdInfoDiff> removedBaseInfoLIst = new ArrayList<>();
 
-    List<String> compareTableNames = compareInfoList.stream().map(m -> m.getTableName()).collect(Collectors.toList());
+    List<String> compareTableNames = compareInfoList.stream().map(MdInfoDiff::getTableName)
+        .toList();
     for (MdInfoDiff baseInfo : baseInfoList) {
       String baseTableName = baseInfo.getTableName();
       if (!compareTableNames.contains(baseTableName)) {
